Ryuutama/Ryuutama.css
/* ... */
.sheet-weaponRow2 {
    position:relative;
    bottom: 4px;
}

.sheet-damage {
    position: relative;
    bottom: 6px;
}

.sheet-concentration {
    display: inline;
}

/* Weapon Mastery 
    ============================= */
input.sheet-radioChoice {
    width: 130px;
    cursor: pointer;
    position: relative;
    opacity: 0;
    z-index: 9999;
    height: 18px;
}

span.sheet-radioChoice {
    text-align: center;
    display: inline-block;
    background: #00cdcd;
    color: black;
    border-radius: 4px;
    width: 130px;
    cursor: pointer;
    position: relative;
    margin-left: -133px;
    font-weight: bold;
    margin-bottom: 5px;
}

input.sheet-radioChoice1:checked + span.sheet-radioChoice1,
input.sheet-radioChoice2:checked + span.sheet-radioChoice2,
input.sheet-radioChoice3:checked + span.sheet-radioChoice3,
input.sheet-radioChoice4:checked + span.sheet-radioChoice4,
input.sheet-radioChoice5:checked + span.sheet-radioChoice5,
inpur.sheet-radioChoice6:checked + span.sheet-radioChoice6 {
    background: #229999;
    border-radius: 4px;
    border: transparent;
    color: white;
}

.sheet-weaponBar {
    padding-left: 10px;
}

/* High Level Tabs
    ============================= */
input.sheet-tab {
    width: 150px;
    height: 40px;
    cursor: pointer;
    position: relative;
    opacity: 0;
    z-index: 9999;
}

span.sheet-tab {
    text-align: center;
    display: inline-block;
    font-size: 17px;
    background: #eeffff;
    color: black;
    font-weight: bold;
    border-radius: 4px;
    width: 150px;
    height: 40px;
    cursor: pointer;
    position: relative;
    vertical-align: middle;
    margin-left: -153px;
    line-height: 40px;
    border: 1px solid #00cdcd;
}

input.sheet-tab1:checked + span.sheet-tab1,
input.sheet-tab2:checked + span.sheet-tab2,
input.sheet-tab3:checked + span.sheet-tab3,
input.sheet-tab4:checked + span.sheet-tab4,
input.sheet-tab5:checked + span.sheet-tab5 {
    background: #229999;
    border-radius: 2px;
    border: transparent;
    color: white;
}

input.sheet-tab1:not(:checked) ~ span.sheet-characterDetails,
input.sheet-tab2:not(:checked) ~ span.sheet-characterClass,
input.sheet-tab3:not(:checked) ~ span.sheet-characterStats,
input.sheet-tab4:not(:checked) ~ span.sheet-characterChecks,
input.sheet-tab5:not(:checked) ~ span.sheet-characterEquipment {
    display: none;
}

input.sheet-tab1:checked ~ span.sheet-characterDetails,
input.sheet-tab2:checked ~ span.sheet-characterClass,
input.sheet-tab3:checked ~ span.sheet-characterStats,
input.sheet-tab4:checked ~ span.sheet-characterChecks,
input.sheet-tab5:checked ~ span.sheet-characterEquipment {
    display: block;
    background-color: #eeffff;
    padding: 5px;
}

/* Roll Templates
    ============================= */
.sheet-rolltemplate-skillCheck .sheet-rollTitle,
.sheet-rolltemplate-accuracyCheck .sheet-rollTitle,
.sheet-rolltemplate-oneDieCheck .sheet-rollTitle {
    color: white;
    padding: .25em 20px;
    font-size: 1.2em;
    margin-bottom: 3px;
    border-spacing: 0;
    text-align: center;
    background: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Ryuutama/images/rollTemplate_rollTitle_bookEnds.png) top left;
    background-repeat: repeat-y;
    min-height: 10px;
    background-size: 100% 34px;
    font-family: 'Charm', 'Palatino Linotype', 'Apple Chancery', cursive;
}

.sheet-rolltemplate-skillCheck .sheet-rollTitle,
.sheet-rolltemplate-oneDieCheck .sheet-rollTitle,
.sheet-rolltemplate-accuracyCheck .sheet-rollTitle {background-color:#aaa57c;}

.sheet-rolltemplate-skillCheck .sheet-rollTitle.sheet-Spring,
.sheet-rolltemplate-oneDieCheck .sheet-rollTitle.sheet-Spring,
.sheet-rolltemplate-accuracyCheck .sheet-rollTitle.sheet-Spring {background-color:#72aa75;}

.sheet-rolltemplate-skillCheck .sheet-rollTitle.sheet-Summer,
.sheet-rolltemplate-oneDieCheck .sheet-rollTitle.sheet-Summer,
.sheet-rolltemplate-accuracyCheck .sheet-rollTitle.sheet-Summer {background-color:#e0861b;}

.sheet-rolltemplate-skillCheck .sheet-rollTitle.sheet-Autumn,
.sheet-rolltemplate-oneDieCheck .sheet-rollTitle.sheet-Autumn,
.sheet-rolltemplate-accuracyCheck .sheet-rollTitle.sheet-Autumn {background-color:#9e022b;}

.sheet-rolltemplate-skillCheck .sheet-rollTitle.sheet-Winter,
.sheet-rolltemplate-oneDieCheck .sheet-rollTitle.sheet-Winter,
.sheet-rolltemplate-accuracyCheck .sheet-rollTitle.sheet-Winter {background-color:#318baa;}

.sheet-rolltemplate-skillCheck .sheet-rollResult,
.sheet-rolltemplate-accuracyCheck .sheet-rollResult,
.sheet-rolltemplate-oneDieCheck .sheet-rollResult{
    margin: 10px;
    vertical-align: top;
    text-decoration: none;
    text-align: center;
}

.sheet-rolltemplate-skillCheck .sheet-critical,
.sheet-rolltemplate-accuracyCheck .sheet-critical {
    color:green;
    font-weight:bold;
    margin-top: 5px;
}

.sheet-rolltemplate-skillCheck .sheet-fumble,
.sheet-rolltemplate-accuracyCheck .sheet-fumble {
    color:red;
    font-weight:bold;
    margin-top: 5px;
}

.sheet-rolltemplate-skillCheck .sheet-container,
.sheet-rolltemplate-accuracyCheck .sheet-container,
.sheet-rolltemplate-oneDieCheck .sheet-container {
    background-color: #ffffff;
    border: 1px solid gray;
    width: 95%;
    overflow: auto;
}

.sheet-rolltemplate-skillCheck .inlinerollresult,
.sheet-rolltemplate-accuracyCheck .inlinerollresult,
.sheet-rolltemplate-oneDieCheck .inlinerollresult {
    background-color: #fff;
    border: 2px solid #fff;
}

.sheet-rolltemplate-oneDieCheck .sheet-rollFreeText {
    margin-left: 5px;
}

.sheet-rolltemplate-spellContainer {
border: 1px solid gray;
}

.sheet-rolltemplate-spellCard {
display: flex;
flex-flow: row wrap;
justify-content: space-between;
background-color: #d0d2e4;
}

.sheet-rolltemplate-spellTitle,
.sheet-rolltemplate-spellAttrText{
background-color: #45619e;
font-family: Helvetica, Arial;
font-weight: bold;
font-size: 12px;
justify-content: center;
color: white;
padding: 1px 3px;
}
/* ... */

